--- a/gestion-reporte/pom.xml
+++ b/gestion-reporte/pom.xml
@@ -14,11 +14,11 @@
     </parent>
 
     <groupId>com.perfulandia</groupId>
-    <artifactId>gestion-producto</artifactId>
+    <artifactId>gestion-reporte</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
-    <name>gestion-de-productos</name>
-    <description>Microservicio REST para gestionar productos</description>
+    <name>gestion-de-reporte</name>
+    <description>Microservicio REST para gestión de reportes</description>
 
     <properties>
         <java.version>17</java.version>
@@ -80,19 +80,12 @@
             <version>2.5.0</version>
         </dependency>
 
-        <!-- Testing Dependencies -->
+        <!-- Spring Boot Test -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-
-        <!-- Spring Security Test (para pruebas de seguridad) 
-        <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-test</artifactId>
-            <scope>test</scope>
-        </dependency> -->
 
         <!-- JUnit 5 -->
         <dependency>
@@ -110,7 +103,7 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- Mockito JUnit 5 Integration -->
+        <!-- Mockito JUnit Integration -->
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-junit-jupiter</artifactId>
@@ -122,7 +115,7 @@
 
     <build>
         <plugins>
-            <!-- Compiler Plugin para habilitar procesado de anotaciones -->
+            <!-- Compiler Plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
