--- a/gestion-reporte/src/main/resources/application.properties
+++ b/gestion-reporte/src/main/resources/application.properties
@@ -1,15 +1,13 @@
 spring.application.name=gestion-de-reporte
 server.port=8084
 
-# MySQL connection
+# MariaDB connection
 spring.datasource.url=jdbc:mariadb://localhost:3306/perfulandiaDB
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
-# JPA/Hibernate settings
+# JPA/Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
-# Configuración de zona horaria
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
